# jdtls-lsp-py

./: .gitignore  README.md  export.bat  export.sh  pyproject.toml  setup.bat  setup.sh  需求.md
docs/: REVERSE_ENGINEERING_DESIGN.md  TEST_PLAN.md
scripts/: export_portable.py  setup_win.py
skills/java-analysis/: SKILL.md
skills/java-callchain-analysis/: SKILL.md
skills/lsp_java_doc/: SKILL.md
skills/lsp_plan/: SKILL.md
src/jdtls_lsp/: __init__.py  __main__.py  analyze.py  callchain.py  callchain_format.py  cli.py  client.py  java_entrypoints.py  java_grep.py  java_javadoc.py  jdtls.py  jrpc.py  logutil.py  lsp_env.py
src/jdtls_lsp/business_summary/: __init__.py
src/jdtls_lsp/callchain/: __init__.py  format.py  trace.py
src/jdtls_lsp/entry_scan/: __init__.py  _java_walk.py  java_entry_patterns.py  java_entrypoints.py  line_patterns.py  rest_http.py
src/jdtls_lsp/reverse_design/: __init__.py  batch_symbols_by_package.py  bundle.py  entrypoint_callchain_down.py  java_enclosing_method.py  mybatis_mapper_link.py  rest_callchain_down.py  rest_callchains_down.py  scan_java_top_level_types.py  scan_modules.py  table_callchain_up.py  table_callchains_up.py  table_manifest.py
src/liteclaw_lsp/: __init__.py  __main__.py  analyze.py  cli.py  client.py  jdtls.py  jrpc.py
